--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,10 @@
   		<artifactId>snakeyaml</artifactId>
   		<version>1.16</version>
   	</dependency>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-jexl</artifactId>
-  		<version>2.1.1</version>
-  	</dependency>
     <dependency>
-	  <groupId>com.google.guava</groupId>
-	  <artifactId>guava</artifactId>
-	  <version>10.0.1</version>
+    	<groupId>org.xerial</groupId>
+    	<artifactId>sqlite-jdbc</artifactId>
+    	<version>3.25.2</version>
     </dependency>
   </dependencies>
 </project>
