--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,6 +7,9 @@ appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=%c{1}::%M %msg%n
 
-rootLogger.level=info
+rootLogger.level=warn
 rootLogger.appenderRefs=stdout
 rootLogger.appenderRef.stdout.ref=STDOUT
+
+logger.ss.name=duffrd.diceroller.model.sqlite.SqliteSuite
+logger.ss.level=info
